--- a/carrito_app/templates/carrito_app/ver_carrito.html
+++ b/carrito_app/templates/carrito_app/ver_carrito.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Catalogo</title>
@@ -13,7 +14,13 @@
   <body>
     {% include 'nav.html' %}
     <div class="container mx-auto px-4 py-8">
-      <h1 class="text-2xl font-bold mb-8">Carrito de Compras</h1>
+        <div class="flex justify-between">
+            <h1 class="text-2xl font-bold mb-8">Carrito de Compras</h1>
+            <a href="{% url 'catalogo' %}" class="text-blue-600 text-sm hidden sm:block">
+                Seguir comprando
+                <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+        </div>
   
       {% if messages %}
       <div class="mb-4">
@@ -36,8 +43,8 @@
                       {% endif %}
                       
                       <div class="flex-grow ml-4">
-                          <h3 class="font-semibold">{{ item.producto.nombre }}</h3>
-                          <p class="text-gray-600">${{ item.producto.precio }}</p>
+                          <p class="font-semibold text-sm">{{ item.producto.nombre }}</p>
+                          <p class="text-gray-600 text-sm">${{ item.producto.precio }}</p>
                       </div>
                       
                       <div class="flex items-center">
@@ -67,7 +74,7 @@
   
               <!-- Resumen del carrito -->
               <div class="lg:col-span-1">
-                  <div class="bg-white rounded-lg shadow-md p-6 sticky top-4">
+                  <div class="bg-white rounded-lg shadow-md p-6 sticky top-4 text-center">
                       <h2 class="text-lg font-semibold mb-4">Resumen del pedido</h2>
                       
                       <div class="space-y-2">
@@ -89,10 +96,15 @@
                       
                       <form method="POST" action="{% url 'crear_orden' %}" class="mt-6">
                         {% csrf_token %}
-                        <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 transition-colors">
+                        <button type="submit" class="w-full bg-blue-600 text-white py-3 px-6 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-150 ease-in-out transform hover:scale-105 mb-5 sm:mb-0">
                             Proceder al pago
+                            <i class="fas fa-arrow-right ml-2"></i>
                         </button>
                     </form>
+                    <a href="{% url 'catalogo' %}" class="w-full py-3 px-6 text-blue-600 sm:hidden">
+                        Seguir comprando
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
                   </div>
               </div>
           </div>
